tests/ast_interpreter/err_fun_arity_too_few.nx
fun add(a, b) {
    print a + b;
}

fun main() {
    add(5);
}